--- a/app/views/adding-value-2024/current/eligibility/common/business-type.html
+++ b/app/views/adding-value-2024/current/eligibility/common/business-type.html
@@ -39,8 +39,8 @@
                         },
                         {
                             text: 'A business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers',
-                            value: 'refurb',
-                            checked: true if data['business-type'] == 'refurb',
+                            value: 'processing',
+                            checked: true if data['business-type'] == 'processing',
                             hint: {
                                 text: 'For example, cheese processing business owned by a dairy farmer'
                             },
