--- a/app/views/adding-value-2024/current/eligibility/funding/potential-funding.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/potential-funding.html
@@ -68,7 +68,7 @@
                     {% if itemsGrantAmount == 500000 %}
 
                         <p>
-                            You may be able to apply for grant funding of up to £500,000, based on the estimated cost of {{ totalCost | inPounds }}.
+                            You may be able to apply for grant funding of up to £500,000, based on the project items cost of {{ totalCost | inPounds }}.
                         </p>
                         
                         <p>
