--- a/app/views/adding-value-2024/current/eligibility/funding/solar-pv-cost.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/solar-pv-cost.html
@@ -56,7 +56,7 @@
                     type: 'number',
                     prefix: { text: '£' },
                     hint: {
-                        html: hintHtml
+                        text: 'Enter solar PV system costs, for example 135,000'
                     },
                     label: {
                         text: 'Solar PV system cost',
