--- a/app/views/adding-value-2024/current/eligibility/funding/solar-pv.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/solar-pv.html
@@ -15,7 +15,11 @@
                  {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        You have the option to buy and install a solar PV system with this grant. The solar PV panels must be installed on the roof of a building related to your project.
+                        You have the option to buy and install a solar PV system with this grant.
+                    </p>
+
+                    <p class="govuk-hint">
+                        The solar PV panels must be installed on the roof of an existing or new building related to your project. 
                     </p>
 
                     <p class="govuk-hint">
