--- a/app/views/adding-value-2024/current/scoring/results.html
+++ b/app/views/adding-value-2024/current/scoring/results.html
@@ -185,18 +185,26 @@
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell">
                             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">
-                                Replaces manual labour
+                                Automated processes
                             </p>
-                            {{ data['scoring-manual-labour-amount'] | checkboxAnswersToList | safe }}
+                        {% if data['scoring-automation'] == 'Yes'%}
+                            <li>
+                            Yes, {{ data['scoring-manual-labour-amount'] }}
+                            </li>
+                        {% else %}
+                            <li>
+                                No
+                            </li>
+                        {% endif %}
                         </th>
                         <td class="govuk-table__cell">
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Reduce the need for manual labour due to current shortage
+                            Increase the use of automation due to the current manual labour shortage
                         </td>
                         <td class="govuk-table__cell">
-                            <a class="govuk-link govuk-link--no-visited-state" href="manual-labour?from-scoring=true">
+                            <a class="govuk-link govuk-link--no-visited-state" href="automation?from-scoring=true">
                                 Change
                             </a>
                         </td>
