--- a/app/views/adding-value-2024/current/scoring/value.html
+++ b/app/views/adding-value-2024/current/scoring/value.html
@@ -31,9 +31,9 @@
                     },
                     items: [
                         {
-                            text: 'Creating a new product',
-                            value: 'Creating a new product',
-                            checked: true if data['scoring-value'] == 'Creating a new product',
+                            text: 'Introducing a new product to your farm',
+                            value: 'Introducing a new product to your farm',
+                            checked: true if data['scoring-value'] == 'Introducing a new product to your farm',
                             hint: {
                                 text: 'For example, slaughtering, cut and packed meat, yogurt to cheese, brewing or distilling'
                             }
