results page update

--- a/app/views/adding-value-2024/current/scoring/results.html
+++ b/app/views/adding-value-2024/current/scoring/results.html
@@ -193,7 +193,7 @@
                             </li>
                         {% else %}
                             <li>
-                            No
+                            No, this project will not use automation
                             </li>
                         {% endif %}
                         </th>
