more av changes

--- a/app/views/adding-value-2024/current/eligibility/funding/cost.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/cost.html
@@ -2,7 +2,7 @@
 
 
 {% block pageTitle %}
-    What is the total estimated cost of the items?
+    What is the estimated cost of the items?
 {% endblock %}
 
 {% block content %}
@@ -15,7 +15,7 @@
 
             
                 <h1 class="govuk-heading-l">
-                    What is the total estimated cost of the items?
+                    What is the estimated cost of the items?
                 </h1>
 
                 {% set hintHtml %}
