--- a/app/views/adding-value-2024/current/start-page.html
+++ b/app/views/adding-value-2024/current/start-page.html
@@ -53,11 +53,7 @@
       </p>
 
       <p>
-        You can apply for up to 50% of the estimated cost of project items.
-      </p>
-
-      <p>
-        You have the option to apply for up to 25% of the estimated cost of buying and installing a solar PV system. 
+        You can apply for up to 50% of the estimated cost of project items. You have the option to apply for up to 25% of the estimated cost of buying and installing a solar PV system.
       </p>
 
       <p>
