--- a/app/views/adding-value-2024/current/scoring/produce.html
+++ b/app/views/adding-value-2024/current/scoring/produce.html
@@ -51,7 +51,7 @@
                             value: 'Wild venison meat produce',
                             checked: true if data['scoring-produce'] == 'Wild venison meat produce',
                             hint: {
-                                text: 'For example, slaughtering, cutting, processing and packing wild venison meat'
+                                text: 'For example, culling, processing and packing wild venison meat'
                             }
                         },
                         {
@@ -59,7 +59,7 @@
                             value: 'Fibre produce',
                             checked: true if data['scoring-produce'] == 'Fibre produce',
                             hint: {
-                                text: 'For example, processing animal hides and leather, processing fibres such as flax and hemp'
+                                text: 'For example, processing animal hides and leather, processing fibres such as wool, flax and hemp'
                             }
                         },
                         {
