--- a/app/views/adding-value-2024/current/eligibility/funding/remaining-cost.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/remaining-cost.html
@@ -74,14 +74,14 @@
                 </p>
 
                 <p>
-                    You can use:
+                    For example, you can use:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
 
                     <li>loans</li>
                     <li>overdrafts</li>
-                    <li>the Basic Payment Scheme</li>
+                    <li>delinked payments</li>
 
                 </ul>
             
