--- a/app/views/adding-value-2024/current/start-page.html
+++ b/app/views/adding-value-2024/current/start-page.html
@@ -57,7 +57,7 @@
       </p>
 
       <p>
-        The maximum grant you can apply for, including solar, is £500,000. The minimum grant for project items is £20,000 (50% of £40,000).
+        The minimum grant for project items is £20,000 (50% of £40,000). The maximum grant you can apply for, including solar, is £500,000. 
       </p>
 
       {{ govukInsetText ({
