error fix smaller abbatoir page

--- a/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir-other.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir-other.html
@@ -30,7 +30,7 @@
                         {
                             text: 'Yes',
                             value: 'Yes',
-                            checked: true if data['smaller-abattoir-other'] == 'Yes'
+                            checked: true if data['smaller-abattoir-other'] == 'Yes',
                             attributes: {
                                 'data-next': 'items-needed'
                             }
@@ -38,7 +38,7 @@
                         {
                             text: 'No',
                             value: 'No',
-                            checked: true if data['smaller-abattoir-other'] == 'No'
+                            checked: true if data['smaller-abattoir-other'] == 'No',
                             attributes: {
                                 'data-next': 'elim-small-abattoir-other'
                             }
