hint text and side bar update

--- a/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir-other.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir-other.html
@@ -24,7 +24,7 @@
                         }
                     },
                     hint: {
-                        text: 'For example, you slaughter animals for a fee and the carcasses remain your property'
+                        text: 'For example, another farmer pays you to slaughter their livestock'
                     },
                     items: [
                         {
@@ -61,7 +61,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    If you are building a new smaller abattoir, you must provide some abattoir services to other farmers.
+                    You must provide some abattoir services to other farmers.
                 </p>
             </div>
 
