automation hint text update

--- a/app/views/adding-value-2024/current/scoring/automation.html
+++ b/app/views/adding-value-2024/current/scoring/automation.html
@@ -40,7 +40,7 @@
                         }
                     },
                     hint: {
-                        text: 'Automation is the use of computer-controlled devices, machines and technical systems to complete tasks and processes, for example fruit grading and sorting using computer vision image processing'
+                        text: 'Automation is the use of computer-controlled devices, machines and technical systems to complete tasks and processes, for example fruit grading using computer vision image processing'
                     },
                     items: [
                         {
