Future customers heading update

--- a/app/views/adding-value-2024/current/scoring/results.html
+++ b/app/views/adding-value-2024/current/scoring/results.html
@@ -225,7 +225,7 @@
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell">
                             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">
-                                Future customers
+                                New customers
                             </p>
                             {{ data['scoring-customers'] | checkboxAnswersToList | safe }}
                         </th>
