--- a/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir-other.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir-other.html
@@ -24,7 +24,7 @@
                         }
                     },
                     hint: {
-                        text: 'For example, another farmer pays you to slaughter their livestock'
+                        text: 'For example, farmers pay you to slaughter their livestock'
                     },
                     items: [
                         {
