--- a/app/views/adding-value-2024/current/scoring/automation.html
+++ b/app/views/adding-value-2024/current/scoring/automation.html
@@ -1,7 +1,7 @@
 {% extends 'adding-value-2024/layout.html' %}
 
 {% block pageTitle %}
-    Will this project use automation?
+    Will this project use any mechanisation instead of manual labour?
 {% endblock %}
 
 {% block content %}
@@ -34,13 +34,13 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will this project use automation?',
+                            text: 'Will this project use any mechanisation instead of manual labour?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
                     hint: {
-                        text: 'Automation is the use of computer-controlled devices, machines and technical systems to complete tasks and processes, for example fruit grading using computer vision image processing'
+                        text: 'Mechanisation is the use of automatic devices, machines and technical systems in processes, for example a fruit grading and sorting machine'
                     },
                     items: [
                         {
@@ -70,7 +70,6 @@
 
         </div>
 
-
         <div class="govuk-grid-column-one-third">
 
             <div class="app-step-nav-related app-step-nav-related--singular">
@@ -78,7 +77,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA wants to fund projects that increase the use of automation due to the current manual labour shortage.
+                    RPA wants to fund projects that increase the use of mechanisation due to the current manual labour shortage.
                 </p>
             </div>
 
