--- a/app/views/adding-value-2024/current/scoring/manual-labour-amount.html
+++ b/app/views/adding-value-2024/current/scoring/manual-labour-amount.html
@@ -1,7 +1,7 @@
 {% extends 'adding-value-2024/layout.html' %}
 
 {% block pageTitle %}
-    How much manual labour will the automation be equal to?
+    How much manual labour will the mechanisation be equal to?
 {% endblock %}
 
 {% block content %}
@@ -21,7 +21,7 @@
                     name: 'scoring-manual-labour-amount',
                     fieldset: {
                         legend: {
-                            text: 'How much manual labour will the automation be equal to?',
+                            text: 'How much manual labour will the mechanisation be equal to?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
@@ -64,7 +64,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA wants to fund projects that reduce the need for manual labour due to the current shortage.
+                    RPA wants to fund projects that increase the use of mechanisation due to the current manual labour shortage.
                 </p>
             </div>
 
