--- a/app/views/adding-value-2024/current/scoring/results.html
+++ b/app/views/adding-value-2024/current/scoring/results.html
@@ -197,7 +197,7 @@
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell">
                             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">
-                                Automation
+                                Mechanisation
                             </p>
                         {% if data['scoring-automation'] == 'Yes'%}
                             <li>
@@ -205,7 +205,7 @@
                             </li>
                         {% else %}
                             <li>
-                            No, this project will not use automation
+                            No, this project will not use mechanisation
                             </li>
                         {% endif %}
                         </th>
@@ -213,7 +213,7 @@
                             Average
                         </td>
                         <td class="govuk-table__cell">
-                            Increase the use of automation due to the current manual labour shortage
+                            Increase the use of mechanisation due to the current manual labour shortage
                         </td>
                         <td class="govuk-table__cell">
                             <a class="govuk-link govuk-link--no-visited-state" href="automation?from-scoring=true">
