hint text change

--- a/app/views/adding-value-2024/current/scoring/automation.html
+++ b/app/views/adding-value-2024/current/scoring/automation.html
@@ -40,7 +40,7 @@
                         }
                     },
                     hint: {
-                        text: 'Mechanisation is the use of automatic devices, machines and technical systems in processes, for example a fruit grading and sorting machine'
+                        text: 'For example, a fruit grading and sorting machine'
                     },
                     items: [
                         {
