--- a/app/views/adding-value-2024/current/scoring/impact.html
+++ b/app/views/adding-value-2024/current/scoring/impact.html
@@ -13,7 +13,7 @@
             {% if data['from-scoring'] == 'true' %}
                 <form action="results">
             {% else %}
-                <form action="automation">
+                <form action="mechanisation">
             {% endif %}
 
             {% set hintHtml %}
