--- a/app/views/adding-value-2024/current/eligibility/funding/elim-remaining-cost.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/elim-remaining-cost.html
@@ -30,7 +30,7 @@
 
                     <li>loans</li>
                     <li>overdrafts</li>
-                    <li>the Basic Payment Scheme</li>
+                    <li>delinked payments</li>
 
                 </ul>
 
