--- a/app/views/adding-value-2024/current/eligibility/funding/solar-pv.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/solar-pv.html
@@ -1,7 +1,7 @@
 {% extends 'adding-value-2024/layout.html' %}
 
 {% block pageTitle %}
-    Will you buy a solar PV system for this building with the grant?
+    Will you buy a solar PV system with the grant?
 {% endblock %}
 
 {% block content %}
@@ -43,7 +43,7 @@
                     name: 'solar-pv',
                     fieldset: {
                         legend: {
-                            text: 'Will you buy a solar PV system for this building with the grant?',
+                            text: 'Will you buy a solar PV system with the grant?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
