--- a/app/views/adding-value-2024/current/scoring/manual-labour-amount.html
+++ b/app/views/adding-value-2024/current/scoring/manual-labour-amount.html
@@ -64,7 +64,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA wants to fund projects that increase the use of mechanisation due to the current manual labour shortage.
+                    RPA wants to fund projects that increase the use of mechanisation due to the manual labour shortage.
                 </p>
             </div>
 
