business type changes

--- a/app/views/adding-value-2024/current/eligibility/common/business-type.html
+++ b/app/views/adding-value-2024/current/eligibility/common/business-type.html
@@ -39,7 +39,7 @@
                             value: 'refurb',
                             checked: true if data['business-type'] == 'refurb',
                             hint: {
-                                text: 'For example, cheese processing business owned by a dairy farmer'
+                                text: 'For example, a cheese production business owned by a group of farmers'
                             },
                             attributes: {
                                 'data-next': 'legal-status'
