--- a/app/views/adding-value-2024/current/scoring/manual-labour-amount.html
+++ b/app/views/adding-value-2024/current/scoring/manual-labour-amount.html
@@ -31,7 +31,7 @@
                     },
                     items: [
                         {
-                            text: 'Up to 5%',
+                            text: 'Up to 5% of workforce',
                             value: 'Up to 5%',
                             checked: true if data['scoring-manual-labour-amount'] == 'Up to 5%'
                         },
@@ -64,7 +64,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA wants to fund projects that increase the use of mechanisation due to the manual labour shortage.
+                    RPA wants to fund projects that increase the use of mechanisation due to the shortage of manual labour.
                 </p>
             </div>
 
